<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="androidx.appcompat.app.AppCompatDelegate"/>

        <variable
            name="isDarkTheme"
            type="java.lang.Boolean" />

        <variable
            name="viewModel"
            type="com.kashyapkpatel.sampleapp.viewmodel.HomeViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.HomeActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
                app:title="@string/app_name"
                app:titleTextColor="?attr/colorOnPrimary">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_margin="@dimen/med_margin"
                    android:checked="@{isDarkTheme}"
                    android:onCheckedChanged="@{(switch, checked) -> viewModel.onThemeChanged(checked)}"
                    android:text="@string/str_switch_theme"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textColor="?attr/colorOnPrimary"
                    app:switchPadding="@dimen/med_margin" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <include layout="@layout/content_scrolling" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/str_show_app_info"
            android:onClick="@{() -> viewModel.showAppInfo()}"
            app:srcCompat="@drawable/ic_baseline_info_24" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>